--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,10 @@ actix-files = "0.4.0"
 log = "0.4.11"
 env_logger = "0.8.1"
 chrono = "0.4.19"
-rusqlite = "0.24.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-futures = "0.3.1"
 failure = "0.1.7"
+sqlite = "0.25.3"
+actix-service = "1.0.0"
+[dev-dependencies]
+actix-rt = "1.1.1"
